--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,12 @@
             <version>5.4.2</version>
             <scope>compile</scope>
         </dependency>
-    </dependencies>
+		<dependency>
+			<groupId>com.vaadin</groupId>
+			<artifactId>vaadin-server</artifactId>
+			<version>8.9.4</version>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
